--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -76,7 +76,12 @@
     \begin{align}
         x_1(k) \circledast x_2(k) = \sum_{\nu =0}^{N-1} x_1(\nu) x_2([k-\nu]_{modN})= \sum_{\nu =0}^{N-1}x_1([k-\nu]_{modN}) x_2(\nu)
     \end{align}
-  \end{mdframed}
+  \end{mdframed} 
+  \subsubsection{Faltung in Matrixschreibweise}
+  \textbf{ACHTUNG:} Auch hier gilt wieder $N_{y}=N_{1}+N_{2}-1$!
+  \begin{center}
+    \includegraphics[width=.5\textwidth]{./img/Faltung_Matrixschreibweise.png}
+\end{center}
 \normalsize
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Korrelation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -87,9 +92,9 @@
         r_{x_1x_2}(\lambda) = \sum_{k=-\infty}^{\infty}x_1^*(k) x_2(k+\lambda)
     \end{align}
   \end{mdframed}
-Korrelation durch schnelle Faltung:\\
+\textbf{Korrelation durch schnelle Faltung:}\\
 1. Beide Signale Zero-Padding auf $N = N_1+N_2-1$\\
-2. $x_1$ Spiegeln\\
+2. $x_1$ Spiegeln ($x_1^*(-\lambda)$)\\
 3. Faltung ausführen
   \begin{mdframed}[style=exercise]
     \begin{align}
@@ -188,14 +193,23 @@ Formeln gelten nur für \textbf{stationäre} Zufallsvariablen bzw stochastische 
         \sigma_x^2 = E[(x-\mu_x)^2] = E[x^2]-\mu_x^2  = \displaystyle\int_{-\infty}^{\infty} (\alpha-\mu_x)^2 \ f_x(\alpha) d\alpha
     \end{align}
   \end{mdframed}
-Für 2 Stoch. unabh. Variablen $f_x(\alpha)$ und $f_y(\beta)$ gilt
+Für 2 Stoch. unabh. Variablen $f_x(\alpha)$ und $f_y(\beta)$ \\
+gilt bei $f_{xy}(\alpha,\beta) = f_x(\alpha)\cdot f_y(\beta)$:\\
   \begin{mdframed}[style=exercise]
     \begin{align}
-        f_{xy}(\alpha,\beta) &= f_x(\alpha)\cdot f_y(\beta)\\
         \mu_{xy} &= \mu_{x} + \mu_{y}\\
         \sigma_{xy}^2 &= \sigma_{x}^2 + \sigma_{y}^2
     \end{align}
   \end{mdframed}
+\begin{minipage}{0.5\textwidth}  
+Bei $f_{xy}(\alpha,\beta) = a\cdot f_x(\alpha)+ b\cdot f_y(\beta)$ gilt:\\
+  \begin{mdframed}[style=exercise]
+    \begin{align}
+        \mu_{xy} = a\cdot \mu_{x} + b \cdot \mu_{y}\\
+        \sigma_{xy} = E\{f_{xy}^{2}\}-\mu_{xy}^{2}=E\{(a\cdot f_x(\alpha)+ b\cdot f_y(\beta))^{2}\}
+    \end{align}
+  \end{mdframed}
+\end{minipage}
 % Für ein deterministisches Signal $x(k)$ gilt $\sigma_x^2=Var(x)=0$
 % Falls $y(k) = x_1(k)x_2(k)$, dann gilt
 %
@@ -291,7 +305,7 @@ Weißes Rauschen (Mittelwertfrei)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% LTI-Systeme %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{LTI-Systeme}
   \begin{center}
-      \includegraphics[width=.15\textwidth]{./img/lti.png}
+      \includegraphics[width=.5\textwidth]{./img/lti.png}
   \end{center}
 Mit konst. Mittelwerten $E[u(k-\nu)]=\mu_x$ und $E[y(k)]=\mu_y$
   \begin{mdframed}[style=exercise]
@@ -299,7 +313,7 @@ Mit konst. Mittelwerten $E[u(k-\nu)]=\mu_x$ und $E[y(k)]=\mu_y$
         \mu_y = \mu_u \sum_{\nu=-\infty}^{\infty} h(\nu) = \mu_u H(e^{j0})
     \end{align}
   \end{mdframed}
-  Zusätzliche Beziehungen
+\textbf{Zusätzliche Beziehungen:}
   \begin{mdframed}[style=exercise]
     \begin{align}
         \varphi_{uy}(\lambda) &= h(\lambda)*\varphi_{uu}(\lambda) \\
@@ -308,11 +322,16 @@ Mit konst. Mittelwerten $E[u(k-\nu)]=\mu_x$ und $E[y(k)]=\mu_y$
         \varphi_{yy}(\lambda) &= h^*(-\lambda)*h(\lambda)*\varphi_{uu}(\lambda)
     \end{align}
   \end{mdframed}
-  \begin{itemize}
-      \item $\phi_{uy}(e^{j\Omega}) = H(e^{j\Omega})\phi_{uu}(e^{j\Omega})$
-      \item $\phi_{yu}(e^{j\Omega}) = H^*(e^{j\Omega})\phi_{uu}(e^{j\Omega})$
-      \item $\phi_{yy}(e^{j\Omega}) = H^*(e^{j\Omega})H(e^{j\Omega})\phi_{uu}(e^{j\Omega}) =\abs{H(e^{j\Omega})}^2 \phi_{uu}(e^{j\Omega}) $ 
-  \end{itemize}
+
+\begin{mdframed}[style=exercise]
+    \begin{align}
+      \phi_{uy}(e^{j\Omega}) = H(e^{j\Omega})\phi_{uu}(e^{j\Omega})\\
+      \phi_{yu}(e^{j\Omega}) = H^*(e^{j\Omega})\phi_{uu}(e^{j\Omega})\\
+      \phi_{yy}(e^{j\Omega}) = H^*(e^{j\Omega})H(e^{j\Omega})\phi_{uu}(e^{j\Omega}) =\abs{H(e^{j\Omega})}^2 \phi_{uu}(e^{j\Omega})
+    \end{align}
+\end{mdframed}
+
+  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Spektralschätzung %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \section{Spektralschätzung}
@@ -376,8 +395,10 @@ Bsp: Sinus $x(t) = sin(w_0t)\cdot w(t)$ mit $w(t)=rect(\frac{t-T/2}{T})$
   \end{itemize}
 \subsection{Zero-Padding}
 Zero-Padding = Annäherung an die DTFT $\rightarrow$ feinere Spektrumauflösung Energiegehalt $E = E_{ZP}$ \\
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Spektral Stoch. Prozesse %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{Spektralschätzung Stoch. Prozesse}
 Periodogramm
   \begin{mdframed}[style=exercise]
@@ -456,16 +477,48 @@ $D\downarrow$ => Überlapp$\uparrow$ => K$\uparrow$ => Rechenaufwand$\uparrow$
 \section{Digitale-Filter}
   \begin{mdframed}[style=exercise]
     \begin{align}
+        H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssignal\grqq{}}\\
         H(z)=\frac{Y(z)}{U(z)}= \frac{\sum_{\mu=0}^{m} b_\mu z^{-\mu}}{\sum_{\nu=0}^{n} a_\nu z^{-\nu}}
     \end{align}
   \end{mdframed}
+
+\subsection{Anmerkung LTI-Systeme:}
+\begin{itemize}
+    \item \textbf{Allgemein: }
+    	\begin{itemize}
+    	\item $z^{-1}$ entspricht Verzögerung um einen Abtastwert
+    	\item z-Trans. = Laplace-Trans. für abgetastete Signale
+    	\item $z = e^{j\cdot\Omega}=e^{(\delta + j \cdot \omega)\cdot T_a}$
+    	\end{itemize}
+    \item \textbf{Besonderheiten: }
+    	\begin{itemize}
+    	\item Bandbreite ist bei TP $\Delta \Omega = 2\cdot\Omega_{3dB}$ 
+    	\item \textbf{Minimalphasigkeit: } NST \textbf{ausschließlich} mit negativem Realwert
+    	\end{itemize}
+    \item \textbf{Ordnung des Systems: } Maximum des Polynomgrades von m \& n
+    \item \textbf{Stabilität: }
+    	\begin{itemize}
+	\item \textbf{Asympthotisch:} \textbf{alle} Beträge $\abs{b_{v}}<1$
+	\item \textbf{Grenzstabil:} einfacher Pol mit $\abs{b_{v}}=1$
+	\item \textbf{Instabil:} mindestens ein Betrag $\abs{b_{v}}>1$\\
+	\textbf{ODER} doppelter Pol mit $\abs{b_{v}}=1$
+	\end{itemize}	
+    \item \textbf{Realisierbarkeit: }
+    	\begin{itemize}
+    	\item Realisierbar wenn \textbf{kausal UND stabil}
+    	\item \textbf{Kausal: Polynomgrad $n \geq m$}\\
+    	(\textbf{NICHT} von \textbf{zukünftigen} Werten abhängig)
+    	\end{itemize}
+\end{itemize}  
+
+\subsection{Pol-Nullstellen-Diagramm:}
 Darstellung Linearfaktoren für n=2
   \begin{mdframed}[style=exercise]
     \begin{align}
         H(z)=\frac{b_0(z-z_{01})(z-z_{02})}{a_0(z-z_{\infty 1})(z-z_{\infty 2})}
     \end{align}
   \end{mdframed}
-Jeder Linearfaktor kann als von der Frequenz $\Omega$ abhängiger Drehzeiger
+
 \begin{itemize}
     \item Pole verstärkt Amplitudengang
     \item Nullstelle dämpft Amplitudengang
@@ -479,9 +532,23 @@ Jeder Linearfaktor kann als von der Frequenz $\Omega$ abhängiger Drehzeiger
       \includegraphics[width=.35\textwidth]{./img/ehk.png}
   \end{center}
 \begin{itemize}
-    \item Amplitudengang: $\abs{H(e^{j\Omega})}=\abs{\frac{b_0}{a_0}} \abs{ \frac{D_{01}D_{02}}{D_{\infty 1}D_{\infty 2}}}$
-    \item Phasengang: $arg({H(e^{j\Omega})})=arg(\frac{b_0}{a_0}) +\phi_{01} +\phi_{02}-\phi_{\infty 1}-\phi_{\infty 2}$
+    \item \textbf{Amplitudengang: } $\abs{H(e^{j\Omega})}=\abs{\frac{b_0}{a_0}} \abs{ \frac{D_{01}D_{02}}{D_{\infty 1}D_{\infty 2}}}$
+    \item \textbf{Phasengang: }\\
+    $arg({H(e^{j\Omega})})=arg(\frac{b_0}{a_0}) +\phi_{01} +\phi_{02}-\phi_{\infty 1}-\phi_{\infty 2}$
 \end{itemize}
+
+\subsection{Besonderheiten: }
+\begin{itemize}
+    \item \textbf{Umrechnung Frequenz in Winkel:} $\varphi = \frac{2\cdot\pi\cdot f_{n}}{f_{Abtast}}$
+    \item Auf Einheitskreis wird (gegen \textbf{Urzeigersinn})\\
+    von 0 Hz (0°) bis $f_{Abtast}$ (360°) gelaufen
+    \item \textbf{Skalierung der Pol- / Nullstellen: } \\
+    Substitution von $N(z)$ durch $N(\frac{z}{c})$\\
+    $N(z)=\sum_{\mu=0}^{m} b_\mu z^{-\mu}$ -> $N(\frac{z}{c})=\sum_{\mu=0}^{m} b_\mu (\frac{z}{c})^{-\mu}$
+    \item\textbf{Hinweis Gruppenlaufzeit: } Sprünge der Phase beeinträchtigen die Gruppenlaufzeit nicht\\
+    $\rightarrow$ Phasensprünge für Ableitung ignorieren!
+\end{itemize}
+ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Rekursiver Glätter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Rekursiver Glätter}
@@ -571,6 +638,19 @@ Bestimmung eines einzelnen DFT-Spektralwert X(n). Gleicher Rechenaufwand wie FFT
   \end{mdframed}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% IIR-Filter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%(%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{IIR-Filter}
+\begin{itemize}
+  \item \textbf{Vorteile: }
+    \begin{itemize}
+     \item geringere Filterordnung bei vergl. FIR-Filter
+     \item Entwurfswerkzeuge aus analoger Welt nutzbar
+     \end{itemize}
+  \item \textbf{Nachteile: }
+    \begin{itemize}
+    \item NICHT linearphasig
+    \item Anfälligkeit gegen Wortlängeneffekte 
+    \item Instabilität möglich
+    \end{itemize}
+\end{itemize}
   \begin{mdframed}[style=exercise]
     \begin{align}
         H(z)=\frac{Y(z)}{U(z)}= \frac{\sum_{\mu=0}^{m} b_\mu z^{-\mu}}{\sum_{\nu=0}^{n} a_\nu z^{-\nu}}\\
@@ -585,11 +665,43 @@ Gruppenlaufzeit $\tau$ = Verzögerungszeit des Systems aufgelöst nach Frequenze
   \end{mdframed}
 \subsubsection{IIR-Entwurfsmethoden}
   \begin{center}
-      \includegraphics[width=.45\textwidth]{./img/entwurf.png}
+      \includegraphics[width=.5\textwidth]{./img/entwurf.png}
   \end{center}
+
+\textbf{Grundtypen von IIR-Filtern:}\\
+(\textbf{Achtung: } Amplitudengang ist hier linear angegeben!)
+\begin{center}
+      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Amplitudengang.png}
+      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Phasengang.png}
+      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Pol_NST.png}
+\end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% FIR-Filter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{minipage}{0.5\textwidth}  
 \subsection{FIR-Filter}
-grundsätzlich Stabil, Ordnung m $\rightarrow$ m Pole im Ursprung
+\begin{itemize}
+  \item \textbf{Besonderheiten: }
+       \begin{itemize}
+       \item \textbf{nichtrekursiver} Filter mit \textbf{Grad m}
+       \item m-facher Pol im Ursprung 
+       \item Einsatz in adaptiven Systemen 
+       \item Impulsantwort entspricht\\
+       den b-Koeffizienten in $H(z)$
+       \end{itemize}
+  \item \textbf{Vorteile: }
+    \begin{itemize}
+     \item Linearphasigkeit \textbf{MÖGLICH}
+     \item \textbf{IMMER} stabil
+     \item endlich Ein- \& Ausschwingzeiten
+     \end{itemize}
+  \item \textbf{Nachteile: }
+    \begin{itemize}
+    \item große Filterordnung wenn hohe Sperrdämpfung / \\
+    steile Filterflanken gefordert sind
+    \item kann mit analogen Bauteilen \\
+    NICHT realisiert werden
+    \end{itemize}
+\end{itemize}
+
   \begin{mdframed}[style=exercise]
     \begin{align}
         H(z)&=\frac{Y(z)}{U(z)}= \sum_{\mu=0}^{m} b_\mu z^{-\mu} \\
@@ -597,63 +709,85 @@ grundsätzlich Stabil, Ordnung m $\rightarrow$ m Pole im Ursprung
         h(k)&= b_k \ \ k\in[0,m] 
     \end{align}
   \end{mdframed}
-Gewollte Eigenschaft: \textcolor{red}{lineare Phase}
+\end{minipage}  
+\begin{minipage}{0.5\textwidth} 
+Gewollte Eigenschaft: \textbf{\textcolor{red}{lineare Phase}}
   \begin{mdframed}[style=exercise]
     \begin{align}
-        \tau_g = -\frac{d}{d\Omega} arg(H(e^{j\Omega})) = const.
+        \tau_{Gruppe} = -\frac{d}{d\Omega} arg(H(e^{j\Omega})) = const.
     \end{align}
   \end{mdframed}
-lineare Phase wenn Nullstellen von H(z)
+Linearphasigkeit gilt wenn Nullstellen von H(z):
 \begin{itemize}
     \item auf Einheitskreis
-    \item in am Einheitskreis gespiegelten Paaren $z_{01}$ und $\frac{1}{z^*_{01}}$
+    \item \textbf{ODER} in am Einheitskreis gespiegelten Paaren\\
+    ($z_{01}$ und $\frac{1}{z^*_{01}})$
 \end{itemize}
-auftreten
+auftreten.
   \begin{center}
-      \includegraphics[width=.1\textwidth]{./img/fir.png}
+      \includegraphics[width=0.8\textwidth]{./img/fir.png}
   \end{center}
-Für linearphasige FIR-Filter der Ordnung p gilt für Impulsantwort h(k) eine der beiden Symmetrien
+Für linearphasige FIR-Filter der Ordnung p gilt\\
+für Impulsantwort h(k):
 \begin{itemize}
     \item $h(k)= h(p-k)$ (gerade Symmetrie) 
-    \item $h(k)= -h(p-k)$ (ungerade Symmetrie) 
+    \item $h(k)= -h(p-k)$ (ungerade Symmetrie)\\
 \end{itemize}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Toleranschema %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Toleranzschema}
-\textbf{Toleranzschema in der log. Notation des \grqq{}filterDesigner\grqq{}: }
-  \begin{center}
-      \includegraphics[width=.5\textwidth]{./img/toleranzschema1.png}
-  \end{center}
-  \textbf{Toleranzschema in der lin. Notation: }
-  \begin{center}
-    \includegraphics[width=.5\textwidth]{./img/toleranzschema.png}
-  \end{center}
-
+\end{minipage}
+\begin{minipage}{0.5\textwidth} 
+\subsubsection{Grundtypen von FIR-Filtern:}
+\textbf{Hinweis: } Symmetrie immer um $\frac{p}{2}$ \textbf{(!!!)}
+\begin{center}
+      \includegraphics[width=1\textwidth]{./img/Grundtypen_FIR.png}
+      \includegraphics[width=0.5\textwidth]{./img/Grundtypen_FIR_NST.png}
+\end{center}
+\textbf{Eigenschaften der Typen:}
 \begin{itemize}
-    \item $A_{pass}=20~log\left(\textstyle{\frac{1+\delta_{D}}{1-\delta_{D}}}\right)=\abs{20\cdot log_{10}(1-\delta_{D})}$
-    \item $\delta_{D}= 1- 10^{\frac{-A_{pass}}{20}}$
-    \item $A_{Stop}=\abs{20\,log(\delta_{S})}$
-    \item $F_{pass}=\frac{\Omega_{D}}{2\pi}f_{A}$
-    \item $F_{stop}=\frac{\Omega_{S}}{2\pi}f_{A}$
+	\item Typ 1: HP, TP, BP, BSP
+	\item Typ 2: kein Hoch- ,Tiefpass \& BSP
+	\item Typ 3: kein Hochpass \& BSP
+	\item Typ 4: kein Tiefpass \& BSP
 \end{itemize}
+\end{minipage}
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Toleranschema %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Toleranzschema:}
+
+\textbf{Toleranzschema in der log. Notation des \\ \grqq{}filterDesigner\grqq{}: }
+  \begin{center}
+      \includegraphics[width=0.5\textwidth]{./img/toleranzschema1.png}
+  \end{center}
+
+\textbf{Toleranzschema in der lin. Notation: }
+  \begin{center}
+    \includegraphics[width=0.5\textwidth]{./img/toleranzschema.png}
+  \end{center}
+  \begin{mdframed}[style=exercise]
+    \begin{align}
+      A_{pass}=20~log\left(\textstyle{\frac{1+\delta_{D}}{1-\delta_{D}}}\right)=\abs{20\cdot log_{10}(1-\delta_{D})}\\
+      \delta_{D}= 1- 10^{\frac{-A_{pass}}{20}}\\
+      A_{Stop}=\abs{20\,log(\delta_{S})}\\
+      F_{pass}=\frac{\Omega_{D}}{2\pi}f_{A}\\
+      F_{stop}=\frac{\Omega_{S}}{2\pi}f_{A}\\
+    \end{align}
+  \end{mdframed}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Kanonische-Formen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Kanonische Struktur: }
+\subsection{Kanonische Strukturen: }
 \begin{itemize}
   \item Realisierung von Filtern mit minimaler Speicherzellenanzahl
   \item für Filter mit Ordnung $p$ sind $p$ Zellen nötig
 \subsubsection{1. Kanonische-Form (IIR)}
 \end{itemize}
-Hälfte der Speicherzellen $a_0=1$
+Hälfte der Speicherzellen \& $a_0=1$
   \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/kanon1.png}
+      \includegraphics[width=.5\textwidth]{./img/kanon1.png}
   \end{center}
-\subsection{2. Kanonische-Form (IIR)}
+\subsubsection{2. Kanonische-Form (IIR)}
   \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/kanon2.png}
+      \includegraphics[width=.5\textwidth]{./img/kanon2.png}
   \end{center}
 \subsubsection{3. Kanonische-Form (IIR)}
-\textbf{Kaskadierung} erzeugt dritte karnonische Struktur\\
+\textbf{Kaskadierung} erzeugt dritte karnonische Struktur\\\\
 \textbf{ACHTUNG: } \\
 Aufteilung in Teilsysteme \textbf{erster} oder \textbf{zweiter} Ordnung\\
  (\grqq{}Second Order Section\grqq{} oder \grqq{}Biquad\grqq{})
@@ -667,30 +801,32 @@ Aufteilung in Teilsysteme \textbf{erster} oder \textbf{zweiter} Ordnung\\
         H_\nu(z)^{(2)}&=\frac{b_{0\nu}+b_{1\nu}z^{-1}+b_{2\nu}z^{-2}}{1+a_{1\nu}z^{-1}+a_{2\nu}z^{-2}}
     \end{align}
   \end{mdframed}
+  \subsubsection{SOS-Faustregel für Biquads (IIR)}
+  Aufteilung der Pole-Nullstellen in Biquads, sodass sich Einflüsse auf Frequenzgang ausgleichen.
+  Vorgehen:
+  \begin{itemize}
+      \item Beginnen mit Pol der am dichtesten am EHK liegt
+  \end{itemize}
+    \begin{center}
+        \includegraphics[width=.5\textwidth]{./img/biquad.png}
+    \end{center}
+\begin{minipage}{0.5\textwidth}   
 \subsubsection{4. Kanonische-Form (IIR)}
 \textbf{Parallelisierung} durch Partialbruchzerlegung erzeugt vierte karnonische Struktur\\
   \begin{center}
-      \includegraphics[width=.25\textwidth]{./img/kanon4.png}
+      \includegraphics[width=.5\textwidth]{./img/kanon4.png}
   \end{center}
   \begin{mdframed}[style=exercise]
     \begin{align}
         H(z)=b_0+\sum_{\nu=1}^{N_P}H\nu(z)
     \end{align}
   \end{mdframed}
+\end{minipage}
 \subsubsection{Trasversalfilter (FIR)}
 Kann effizient durch MAC-Befehl realisiert werden. 
 Für linearphasige reelwertige FIR-Filter kann die Symmetrie der $b_k$ genutzt werden.
   \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/trans.png}
-  \end{center}
-\subsubsection{SOS-Faustregel (IIR)}
-Aufteilung der Pole-Nullstellen in Biquads, sodass sich Einflüsse auf Frequenzgang ausgleichen.
-Vorgehen:
-\begin{itemize}
-    \item Beginnen mit Pol der am dichtesten am EHK liegt
-\end{itemize}
-  \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/biquad.png}
+      \includegraphics[width=.5\textwidth]{./img/trans.png}
   \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Abtastung %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -718,14 +854,14 @@ was zum Spektrum $X_d(e^{j\Omega})$ führt.
     \item Falls Nyquist-Kriterium $\frac{f_A}{M}>2\tilde{f}_{max}$ nicht erfüllt $\rightarrow$ Hohe Frequenzanteile Tiefpass-Filtern 
   \end{itemize}
   \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/dezi2.png}
+      \includegraphics[width=.5\textwidth]{./img/dezi2.png}
   \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Interpolator %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Interpolator Ganzzahliges M}
 Interpolator = Expander
   \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/interpol.png}
+      \includegraphics[width=.4\textwidth]{./img/interpol.png}
   \end{center}
 Expander hängt hinter jedem Abtastwert von x(k) L-1 0er an.
 $x_e(k)= [x(k/L) \ zeros(1,L-1)]$
@@ -899,14 +1035,15 @@ Zeitdiskrete Fouriertransformation ist Grenzwert der DFT für $N\to\infty$ und k
   \egroup
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Diskrete Fouriertransformation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{minipage}{0.5\textwidth}  
 \subsection{DFT}
-DFT nimmt implizit unendlich periodische Fortsetzung des Signals an. Zu beachten: $-1_{modN}=-1 + N$, $-2_{modN}=-2+N$, ... (solange Addition von N bis positiv!).
-Math. Modulo:
+DFT nimmt implizit unendlich periodische Fortsetzung des Signals an. Zu beachten: $-1_{modN}=-1 + N$, $-2_{modN}=-2+N$, ... (solange Addition von N bis positiv!).\\
+\textbf{Math. Modulo:}
 $\tilde{x}(k) = x([k]_{modN})$ 
 $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
   \begin{center}
-      \includegraphics[width=.2\textwidth]{./img/x_k.png}
-      \includegraphics[width=.2\textwidth]{./img/x_mk.png}
+      \includegraphics[width=1\textwidth]{./img/x_k.png}
+      \includegraphics[width=1\textwidth]{./img/x_mk.png}
   \end{center}
 
 %%% Rechenregeln
@@ -948,7 +1085,9 @@ $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
   \end{tabular}
   \egroup
 \end{center}
+\end{minipage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Z-Transformation (einseitig) %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{minipage}{0.5\textwidth}  
 \subsection{Z-Transformation (einseitig)}
 %%% Regeln
 %%% Quelle: DSV-Skript, Kapitel Elementare DSV
@@ -1015,9 +1154,10 @@ $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
   \end{tabular}
   \egroup
 \end{center}
+\end{minipage}
 
 %%% Korrespondenzen
-Alle $x(k)=0$ für $k < 0$.
+\textbf{Alle $x(k)=0$ für $k < 0$}.
 \begin{center}
   \bgroup
   \def\arraystretch{1.5}
@@ -1061,31 +1201,10 @@ Alle $x(k)=0$ für $k < 0$.
   \end{tabular}
   \egroup
 \end{center}
-  
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Korrespondenzen %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Transformationen / Korrespondenzen}
-\textbf{Discrete-Time Fourier Transform (DTFT)}
-\begin{center}
-      \includegraphics[width=.50\textwidth]{./img/DTFT_1.png}
-      \includegraphics[width=.50\textwidth]{./img/DTFT_2.png}
- \end{center}
- 
-\textbf{Discrete Fourier Transform (DFT)}
- \begin{center}
-      \includegraphics[width=.50\textwidth]{./img/DFT_1.png}
-      \includegraphics[width=.50\textwidth]{./img/DFT_2.png}
- \end{center}
- 
- \textbf{z-Transformation (DFT)}
- \begin{center}
-      \includegraphics[width=.50\textwidth]{./img/Z_trans_1.png}
- \end{center}
- 
+ \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Mathe-Tricks %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\subsection{Mathematische Anmerkungen}
+\section{Mathematische Anmerkungen}
 \begin{mdframed}[style=exercise]
     \begin{align}
      \textbf{Eueler Formel: } e^{i\Omega} = cos(\Omega) + i\cdot sin(\Omega)\\
@@ -1093,7 +1212,7 @@ Alle $x(k)=0$ für $k < 0$.
      sin(\Omega) = \frac{e^{-i\Omega}-e^{-i\Omega}}{2j}\\
      cos(\pi\cdot k) = (-1)^{k}\\
      cos^{2}(k)+sin^{2}(k)=1\\
-    \textbf{Rechteck-Funktion: } rect(\frac{t-t_{0}}{T})\\
+    \textbf{Rechteck-Funktion: } rect(\frac{t-t_{0}}{T})
     \end{align}
 \end{mdframed}
 
@@ -1128,6 +1247,7 @@ Alle $x(k)=0$ für $k < 0$.
      sin(\frac{2\cdot\pi\cdot f_{sin}\cdot k}{f_{A}}) = \frac{1}{2j}\cdot (e^{\frac{j\cdot 2\cdot\pi\cdot f_{sin}\cdot k}{f_{A}}}-e^{\frac{j\cdot 2\cdot\pi\cdot f_{sin}\cdot k}{f_{A}}})
     \end{align}
 \end{mdframed}
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Rechteck als Fensterfunktion%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \subsection{Rechteck als Fensterfunktion}
@@ -1143,107 +1263,40 @@ Alle $x(k)=0$ für $k < 0$.
 = \abs{T \cdot si(\Omega\cdot\frac{T}{2})\cdot e^{-j\Omega\cdot T / 2}}
     \end{align}
 \end{mdframed}
-\begin{center}
-      \includegraphics[width=.30\textwidth]{./img/si_funktion.png}
- \end{center}
- 
- In der Abbildung ist eine um den Faktor 6 skalierte si-Funktion zu sehen.
- Die hierbei gewählte Fenster-Breite T wurde auf 1 festgelegt. 
- Somit beträgt die Breite der Hauptkeule 2 und die der Nebenkeule 1. 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Pol-Nullstellen-Bewertung %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Pol-Nullstellen-Bewertung}
-Die Auswirkung der Pol- / Nullstellen-Position wird hier anhand eines Systems zweiter Ordnung gezeigt.
 \begin{center}
-      \includegraphics[width=.35\textwidth]{./img/pole_zero_3.png}
-      \includegraphics[width=.50\textwidth]{./img/pole_zero_1.png}
-      \includegraphics[width=.50\textwidth]{./img/pole_zero_2.png}
+      \includegraphics[width=0.4\textwidth]{./img/si_funktion.png}
  \end{center}
-
-\textbf{Besonderheiten: }
-\begin{itemize}
-    \item \textbf{Linearphasigkeit: }
-    	\begin{itemize}
-    	\item \textbf{Bedeutung:} linearer Zusammenhang zw. Frequenz und Phasenverschiebung\\
-    	=> Gruppenlaufzeit / zeitliche Verzögerung durch Filter IMMER gleich
-    	\item \textbf{Voraussetzung:} NST paarweise am Einheitskreis \grqq{}gespiegelt\grqq{} ($z_{01} -> \frac{1}{{z_{01}}^{*}}$)\\
-    	ODER NST alle auf Einheitskreis \\(ACHTUNG: Phasensprünge)
-    	\end{itemize}
-    \item \textbf{Umrechnung Frequenz in Winkel:} $\varphi = \frac{2\cdot\pi\cdot f_{n}}{f_{Abtast}}$
-    \item Auf Einheitskreis wird gegen den \textbf{Urzeigersinn}\\
-    von 0 Hz (0°) bis $f_{Abtast}$ (360° bzw. $2\pi$) gelaufen
-    \item \textbf{Skalierung der Pol- / Nullstellen: } \\
-    Substitution von $N(z)$ durch $N(\frac{z}{c})$\\
-    $N(z)=\sum_{\mu=0}^{m} b_\mu z^{-\mu}$ -> $N(\frac{z}{c})=\sum_{\mu=0}^{m} b_\mu (\frac{z}{c})^{-\mu}$
-    \item\textbf{Hinweis Gruppenlaufzeit: } Sprünge der Phase beeinträchtigen die Gruppenlaufzeit nicht\\
-    $\rightarrow$ Phasensprünge für Ableitung ignorieren!
-\end{itemize}
- 
+ \newpageS
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Hinweise Diagramme %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Hinweise zur Interpretation von Diagrammen}
-\textbf{Spektrogram}
+\begin{minipage}{0.5\textwidth} 
+\section{Interpretation von Diagrammen}
+\subsection{Spektrogram:}
 \begin{itemize}
     \item Spektrogram zeigt Frequenzanteile gemäß FFT/DFT
     \item Höchste Frequenz entspricht Abtastfrequenz
 \end{itemize}
 
-\textbf{Periodogram}  
+\subsection{Periodogram:}  
 \begin{itemize}
     \item Periodogram zeigt Schätzung des Autoleistungsdichte-Spektrums 
     \item Gewichtetes Betragsquadrat des Amplitudenspektrums
     \item $\hat{\phi}_{Per} = \frac{1}{N}\abs{X(n)}^2$
 \end{itemize}  
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Bedeutung Amplituden %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Bedeutung der Diagramm-Werte im Bezug auf ein Beispiel-Signal}
 $x[k] = a\cdot cos(\Omega_{0}\cdot k)$
 \begin{itemize}
     \item Spektrog.: $max(\abs{X[\Omega]})= a\cdot\frac{N}{2}$ 
     \item Periodog.: $max(\hat{\phi}_{Per})= a^{2}\cdot\frac{N}{4}$ 
 \end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Anmerkung LTI-Systeme %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Anmerkung LTI-Systeme}
-$H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssignal\grqq{}}$
-\begin{itemize}
-    \item \textbf{Allgemein: }
-    	\begin{itemize}
-    	\item $z^{-1}$ entspricht Verzögerung um einen Abtastwert
-    	\item z-Trans. = Laplace-Trans. für abgetastete Signale
-    	\item $z = e^{j\cdot\Omega}=e^{(\delta + j \cdot \omega)\cdot T_a}$
-    	\end{itemize}
-    \item \textbf{Besonderheiten: }
-    	\begin{itemize}
-    	\item Bandbreite ist bei TP $\Delta \Omega = 2\cdot\Omega_{3dB}$ 
-    	\item \textbf{Minimalphasigkeit: } NST \textbf{ausschließlich} mit negativem Realwert
-    	\end{itemize}
-    \item \textbf{Übertragungsfunktion: } $H(z)=\frac{Y(z)}{U(z)}= \frac{\sum_{\mu=0}^{m} b_\mu z^{-\mu}}{\sum_{\nu=0}^{n} a_\nu z^{-\nu}}$	
-    \item \textbf{Ordnung des Systems: } Maximum des Polynomgrades von m \& n
-    \item \textbf{Stabilität: }
-    	\begin{itemize}
-	\item \textbf{Asympthotisch:} \textbf{alle} Beträge $\abs{b_{v}}<1$
-	\item \textbf{Grenzstabil:} einfacher Pol mit $\abs{b_{v}}=1$
-	\item \textbf{Instabil:} mindestens ein Betrag $\abs{b_{v}}>1$\\
-	\textbf{ODER} doppelter Pol mit $\abs{b_{v}}=1$
-	\end{itemize}	
-    \item \textbf{Realisierbarkeit: }
-    	\begin{itemize}
-    	\item Realisierbar wenn \textbf{kausal UND stabil}
-    	\item \textbf{Kausal: Polynomgrad $n \geq m$}\\
-    	(\textbf{NICHT} von \textbf{zukünftigen} Werten abhängig)
-    	\item \textbf{Stabilität: } siehe oben
-    	\end{itemize}
-    \item 
-\end{itemize}  
-
+\end{minipage}
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Taschenrechner-Tricks %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Taschenrechner-Tricks (Casio fx-991DEX)}
+\section{Taschenrechner-Tricks (fx-991DEX)}
 \begin{itemize}
     \item \textbf{Polstellen-Bestimmung:}  
    	 \begin{enumerate}
@@ -1263,110 +1316,6 @@ $H(z)=\frac{Y(z)}{U(z)}=\frac{\grqq{}Ausgangssignal\grqq{}}{\grqq{}Eingangssigna
      	 \textbf{$N_{Abtast}$: } kleinste Anzahl an Abtastwerten ohne Leckeffekt\\
      	 \textbf{$n_{Ganzzahl}$: } Ganzzahliges Vielfaches
          \end{enumerate}	 	 
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% FIR-FIlter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{FIR-Filter}
-\begin{itemize}
-    \item \textbf{Besonderheiten: }
-         \begin{itemize}
-         \item \textbf{nichtrekursiver} Filter mit \textbf{Grad m}
-         \item $H(z)=\frac{Y(z)}{U(z)}= \sum_{\mu=0}^{m} b_\mu z^{-\mu}$
-         \item m-facher Pol im Ursprung 
-         \item Einsatz in adaptiven Systemen
-         \item Impulsantwort: gerade \textbf{($h(k)=h(p-k)$)}\\
-         oder ungerade \textbf{($h(k)=-h(p-k)$)} Symmetrie
-         \item Gruppenlaufzeit:  $\tau_{Gruppe} = -\frac{d}{d\Omega}arg(H(\Omega)) = \frac{p}{2}$ ($p$: Ordnung) 
-         \item Impulsantowrt entspricht den b-Koeffizienten in $H(z)$
-         \end{itemize}
-    \item \textbf{Vorteile: }
-   	 \begin{itemize}
-    	 \item linearphasig / konstante Gruppenlaufzeit\\
-    	 \textbf{WENN} nur gespiegelte NST-Paare: $z_{01}$ und $\frac{1}{z^*_{01}}$
-    	 \textbf{ODER} NST auf Einheitskreis
-    	 \item \textbf{IMMER} stabil
-    	 \item endlich Ein- \& Ausschwingzeiten
-    	 \end{itemize}
-    \item \textbf{Nachteile: }
-    	\begin{itemize}
-    	\item große Filterordnung wenn hohe Sperrdämpfung / \\
-    	steile Filterflanken gefordert sind
-    	\item kann mit analogen Bauteilen \\
-    	NICHT realisiert werden
-    	\end{itemize}
-\end{itemize}
-
-\textbf{Grundtypen von FIR-Filtern}\\ (mit entsprechenden Eigenschaften):\\
-\textbf{Hinweis: } Symmetrie immer um $\frac{p}{2}$ \textbf{(!!!)}
-\begin{center}
-      \includegraphics[width=.50\textwidth]{./img/Grundtypen_FIR.png}
-      \includegraphics[width=0.25\textwidth]{./img/Grundtypen_FIR_NST.png}
-\end{center}
-\textbf{Eigenschaften der Typen:}
-\begin{itemize}
-	\item Typ 1: HP, TP, BP, BSP
-	\item Typ 2: kein Hoch- ,Tiefpass \& BSP
-	\item Typ 3: kein Hochpass \& BSP
-	\item Typ 4: kein Tiefpass \& BSP
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% IIR-FIlter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{IIR-Filter}
-\begin{itemize}
-    \item \textbf{Besonderheiten: }
-         \begin{itemize}
-         \item 
-         \end{itemize}
-    \item \textbf{Vorteile: }
-   	 \begin{itemize}
-    	 \item geringere Filterordnung bei vergleichbarem FIR-Filter
-    	 \item Entwurfswerkzeuge aus analoger Welt können genutzt werden
-    	 \end{itemize}
-    \item \textbf{Nachteile: }
-    	\begin{itemize}
-    	\item NICHT linearphasig
-    	\item Anfälligkeit gegen Wortlängeneffekte 
-    	\item Instabilität möglich
-    	\end{itemize}
-\end{itemize}
-
-\textbf{Grundtypen von IIR-Filtern:}\\
-(\textbf{Achtung: } Amplitudengang ist hier linear angegeben!)
-\begin{center}
-      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Amplitudengang.png}
-      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Phasengang.png}
-      \includegraphics[width=0.50\textwidth]{./img/IIR_Filtertypen_Pol_NST.png}
-\end{center}
-\textbf{Eigenschaften der Typen:}
-\begin{itemize}
-	\item \textbf{Butterworth:}
-		\begin{itemize}
-		\item monoton fallender Verlauf
-		\item maximal flacher Verlauf im Sperrbereich
-		\end{itemize}
-	\item \textbf{Tschebyscheff Typ I:}
-		\begin{itemize}
-		\item oszilliert im Durchlassb. mit p Extrema \\
-		(p = Filterordnung)\\
-    \textbf{ACHTUNG: } jeweils Minimas \& Maximas beachten
-		\item monoton fallend im Übergangs‐ \& Sperrbereich
-		\end{itemize}
-	\item \textbf{Tschebyscheff Typ II:}
-		\begin{itemize}
-		\item oszilliert im Sperrb. („equiripple“‐Verhalten)
-		\item monoton fallend im Durchlassbereich
-		\item NST im Sperrbereich
-		\end{itemize}
-	\item \textbf{Cauer:}
-		\begin{itemize}
-		\item oszilliert im Durchl. \& Sperrb. („equiripple“‐Verhalten)
-		\item monoton fallend im Übergangsbereich
-		\item hohe Sperrdämpfung
-		\end{itemize}
 \end{itemize}
 
 \end{document}
